[gd_scene load_steps=22 format=3 uid="uid://h2scap1qo4n4"]

[ext_resource type="PackedScene" uid="uid://8e0tmtvyvj78" path="res://Scenes/BoardHolder.tscn" id="1_sy3iw"]
[ext_resource type="Script" path="res://Scripts/board_colorizer.gd" id="2_t3gmd"]
[ext_resource type="Script" path="res://Scripts/piece_manager.gd" id="4_50mry"]
[ext_resource type="Script" path="res://Scripts/dev_zombie_testing.gd" id="4_hc0t1"]
[ext_resource type="Texture2D" uid="uid://cfhrvoilevxcq" path="res://Sprites/Pieces/wq.png" id="6_kim2g"]
[ext_resource type="Script" path="res://Scripts/promote_ui_handler.gd" id="6_n1ram"]
[ext_resource type="Texture2D" uid="uid://dta3jhs7tmck7" path="res://Sprites/Pieces/wr.png" id="7_7qoh4"]
[ext_resource type="Texture2D" uid="uid://b3435logre62w" path="res://Sprites/Pieces/wb.png" id="8_qjice"]
[ext_resource type="Texture2D" uid="uid://l4a4oj4t8yec" path="res://Sprites/cube.png" id="8_rlyhm"]
[ext_resource type="Texture2D" uid="uid://btq0asoiaud1p" path="res://Sprites/Pieces/wn.png" id="9_v7bld"]
[ext_resource type="Script" path="res://Scripts/zombie_wave_spawner.gd" id="12_7dnc4"]
[ext_resource type="Texture2D" uid="uid://3v4ibvux0n0w" path="res://Sprites/reload.png" id="12_s43k6"]
[ext_resource type="Script" path="res://Scripts/reload.gd" id="13_h56p8"]
[ext_resource type="Script" path="res://Scripts/game_over_area.gd" id="14_tm30i"]
[ext_resource type="Texture2D" uid="uid://dd0mattlfruv1" path="res://Sprites/pause.png" id="15_5km0r"]
[ext_resource type="Script" path="res://Scripts/pause.gd" id="16_aa2fe"]
[ext_resource type="Script" path="res://Scripts/BackToGameRestart.gd" id="17_oic7e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jmfpa"]
size = Vector2(260, 260)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6rdxl"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkv0l"]
size = Vector2(433.777, 4615.11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_acv6n"]
size = Vector2(1202.67, 205.333)

[node name="Main" type="Node2D"]

[node name="BoardHolder" parent="." instance=ExtResource("1_sy3iw")]
unique_name_in_owner = true
position = Vector2(-480, -224)
script = ExtResource("2_t3gmd")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PieceManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_50mry")

[node name="DevZombieTesting" type="Node2D" parent="."]
script = ExtResource("4_hc0t1")

[node name="PromoteUIHandler" type="Node2D" parent="."]
script = ExtResource("6_n1ram")

[node name="Wq" type="Sprite2D" parent="PromoteUIHandler"]
position = Vector2(-485, -290)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_kim2g")

[node name="Area2D" type="Area2D" parent="PromoteUIHandler/Wq"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PromoteUIHandler/Wq/Area2D"]
position = Vector2(3.33325, 3.33325)
shape = SubResource("RectangleShape2D_jmfpa")
debug_color = Color(0, 0.595, 0.7, 0)

[node name="Highlight" type="Sprite2D" parent="PromoteUIHandler/Wq"]
modulate = Color(1, 0.8375, 0.25, 0.4)
scale = Vector2(16, 16)
texture = ExtResource("8_rlyhm")

[node name="Wr" type="Sprite2D" parent="PromoteUIHandler"]
position = Vector2(-430, -290)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_7qoh4")

[node name="Area2D" type="Area2D" parent="PromoteUIHandler/Wr"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PromoteUIHandler/Wr/Area2D"]
position = Vector2(3.33325, 3.33325)
shape = SubResource("RectangleShape2D_jmfpa")
debug_color = Color(0, 0.595, 0.7, 0)

[node name="Highlight" type="Sprite2D" parent="PromoteUIHandler/Wr"]
modulate = Color(1, 0.8375, 0.25, 0.4)
scale = Vector2(16, 16)
texture = ExtResource("8_rlyhm")

[node name="Wb" type="Sprite2D" parent="PromoteUIHandler"]
position = Vector2(-375, -290)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_qjice")

[node name="Area2D" type="Area2D" parent="PromoteUIHandler/Wb"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PromoteUIHandler/Wb/Area2D"]
position = Vector2(3.33325, 3.33325)
shape = SubResource("RectangleShape2D_jmfpa")
debug_color = Color(0, 0.595, 0.7, 0)

[node name="Highlight" type="Sprite2D" parent="PromoteUIHandler/Wb"]
modulate = Color(1, 0.8375, 0.25, 0.4)
scale = Vector2(16, 16)
texture = ExtResource("8_rlyhm")

[node name="Wn" type="Sprite2D" parent="PromoteUIHandler"]
position = Vector2(-320, -290)
scale = Vector2(0.15, 0.15)
texture = ExtResource("9_v7bld")

[node name="Area2D" type="Area2D" parent="PromoteUIHandler/Wn"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PromoteUIHandler/Wn/Area2D"]
position = Vector2(3.33325, 3.33325)
shape = SubResource("RectangleShape2D_jmfpa")
debug_color = Color(0, 0.595, 0.7, 0)

[node name="Highlight" type="Sprite2D" parent="PromoteUIHandler/Wn"]
modulate = Color(1, 0.8375, 0.25, 0.4)
scale = Vector2(16, 16)
texture = ExtResource("8_rlyhm")

[node name="ZombieWaveSpawner" type="Node2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("12_7dnc4")

[node name="Reload" type="Sprite2D" parent="."]
position = Vector2(-536, 290)
scale = Vector2(0.375, 0.375)
texture = ExtResource("12_s43k6")
script = ExtResource("13_h56p8")

[node name="Area2D" type="Area2D" parent="Reload"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reload/Area2D"]
shape = SubResource("RectangleShape2D_6rdxl")

[node name="GameOverArea" type="Node2D" parent="."]
position = Vector2(-600, 0)
scale = Vector2(0.140625, 0.140625)
script = ExtResource("14_tm30i")

[node name="Area2D" type="Area2D" parent="GameOverArea"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameOverArea/Area2D"]
position = Vector2(-110.223, -17.7778)
shape = SubResource("RectangleShape2D_wkv0l")

[node name="Pause" type="Sprite2D" parent="."]
process_mode = 3
position = Vector2(-471, 290)
scale = Vector2(0.375, 0.375)
texture = ExtResource("15_5km0r")
script = ExtResource("16_aa2fe")

[node name="Area2D" type="Area2D" parent="Pause"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pause/Area2D"]
shape = SubResource("RectangleShape2D_6rdxl")

[node name="Sprite2D" type="Sprite2D" parent="Pause"]
visible = false
modulate = Color(0.68515, 0.6603, 0.71, 0.87451)
position = Vector2(1261.33, -776)
scale = Vector2(166.333, 90)
texture = ExtResource("8_rlyhm")

[node name="Reload" type="Label" parent="Pause"]
visible = false
offset_left = 632.0
offset_top = -1018.67
offset_right = 4019.0
offset_bottom = 282.333
scale = Vector2(0.375, 0.375)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 626
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("17_oic7e")

[node name="Area2D" type="Area2D" parent="Pause/Reload"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pause/Reload/Area2D"]
position = Vector2(577.333, 132)
shape = SubResource("RectangleShape2D_acv6n")
debug_color = Color(0, 0.595, 0.7, 0)

[connection signal="input_event" from="PromoteUIHandler/Wq/Area2D" to="PromoteUIHandler" method="QueenInputEvent"]
[connection signal="input_event" from="PromoteUIHandler/Wr/Area2D" to="PromoteUIHandler" method="RookInputEvent"]
[connection signal="input_event" from="PromoteUIHandler/Wb/Area2D" to="PromoteUIHandler" method="BishopInputEvent"]
[connection signal="input_event" from="PromoteUIHandler/Wn/Area2D" to="PromoteUIHandler" method="KnightInputEvent"]
[connection signal="input_event" from="Reload/Area2D" to="Reload" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="GameOverArea/Area2D" to="GameOverArea" method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Pause/Area2D" to="Pause" method="_on_area_2d_input_event"]
[connection signal="input_event" from="Pause/Reload/Area2D" to="Pause/Reload" method="_on_area_2d_input_event"]
